--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html ng-app>
 <head>
-    <title>sample web page</title>
+    <title>Select The Right Country</title>
     <script type="text/javascript" src="angular.min.js"></script>
     <script type="text/javascript" src="mapapp.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -3936,19 +3936,20 @@
 </svg>
 
 <div>
-<span class="optionsGroup" ng-repeat="country in shortListedCountries">
-    <input type="radio" name="countryChoice" value="{{country.shortCode}}" ng-model="$parent.selectedAnswer"
-           ng-change="$parent.submitAnswer($parent.selectedAnswer)">{{country.name}}<br>
-</span>
-<span class="answerGroup">
-<button ng-click="nextQuestion()">Next Question</button>
-<span ng-show="showResult()">
-    {{message}}
-    <span ng-show="isAnswerFalse()">
-        {{failure_counter}}
+    <span class="question">Which Country is highlighted in the map?</span>
+    <span class="optionsGroup" ng-repeat="country in shortListedCountries">
+        <input type="radio" name="countryChoice" value="{{country.shortCode}}" ng-model="$parent.selectedAnswer"
+            ng-change="$parent.submitAnswer($parent.selectedAnswer)">{{country.name}}<br>
     </span>
-</span>
-</span>
+    <span class="answerGroup">
+        <button ng-click="nextQuestion()">Next Question</button>
+        <span ng-show="showResult()">
+            {{message}}
+                <span ng-show="isAnswerFalse()">
+                    {{failure_counter}}
+                </span>
+        </span>
+    </span>
 </div>
 
 </body>
